<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Settings Button -->
    <!-- Thumbnail ImageView -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsBtn"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/settings"
        android:text=""
        app:icon="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar" />



    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="76dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/thumbnail_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Video Title TextView -->
    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <!-- Channel Name TextView -->
    <TextView
        android:id="@+id/channelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_name"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <!-- Duration TextView -->
    <TextView
        android:id="@+id/videoLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_duration"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/channelName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <!-- View Count TextView -->
    <TextView
        android:id="@+id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_count"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/videoLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/viewCount"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/result_list_item" />

    <!-- Barrier for bottom bar -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="urlLayout" />

    <!-- TextInputLayout for URL Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/paste_url_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlET"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <!-- Circular Download Button -->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/pasteBtn"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="143dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/paste_from_clipboard_1"
            android:text=""
            app:icon="@drawable/ic_clipboard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/downloadBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/downloads"
            android:text="@string/d"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/CircleShape" />


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Circular Download Button -->

</androidx.constraintlayout.widget.ConstraintLayout>